ordersystem/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: ro  # Ingress의 namespace 설정
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
spec:
  tls:
  - hosts:
    - "server.araboka.store"
    secretName: jungeun-com-tls
  rules:
    - host: server.araboka.store
      http: 
        paths:
          # - path: /product-service/(.*) # msa가 아니라 중간 product... 필요 X
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ordersystem-service
                port: 
                  number: 80
